<resources>
    <string name="app_name">Turkish-Circassian Dictionary</string>
    <string name="search_hint">Search for a word</string>
    <string name="title_activity_word_detail" translatable="false">WordDetailActivity</string>
    <string name="title_activity_settings" translatable="false">Settings</string>
    <string name="Open" translatable="false">Open</string>
    <string name="Close" translatable="false">Close</string>
    <string name="open_source_desc">"Circassian-Turkish Dictionary is an open source software."</string>
    <string name="credits">Search Icon, Archive Icon made by <a href="https://www.flaticon.com/authors/smashicons">SmashIcons</a> from <a href="https://www.flaticon.com">www.flaticon.com</a>
        \n\nInformation Icon, Rate Icon, No Match Search Icon made by <a href="https://www.freepik.com/">Freepik</a> from <a href="https://www.flaticon.com">https://www.flaticon.com</a>
        \n\nSettings Icon made by <a href="https://www.flaticon.com/authors/gregor-cresnar">Gregor Cresnar</a> from <a href="https://www.flaticon.com">www.flaticon.com</a>
        \n\nFeedback Icon made by <a href="https://www.flaticon.com/authors/those-icons">ThoseIcons</a> from <a href="https://www.flaticon.com">www.flaticon.com</a>
        \n\nAbout Page Background: Photo by <a href="https://unsplash.com/@scottwebb">Scott Webb</a> on <a href="https://unsplash.com">Unsplash</a></string>
    <string name="credits_content_one">Search Icon, Archive Icon, Special Characters Icon made by <a href="https://www.flaticon.com/authors/smashicons">SmashIcons</a> from <a href="https://www.flaticon.com">www.flaticon.com</a></string>
    <string name="credits_content_two">Information Icon, Rate Icon, No Match Search Icon, Alphabet Icon made by <a href="https://www.freepik.com/">Freepik</a> from <a href="https://www.flaticon.com">https://www.flaticon.com</a></string>
    <string name="credits_content_three">Settings Icon, Close Special Character Panel Icon made by <a href="https://www.flaticon.com/authors/gregor-cresnar">Gregor Cresnar</a> from <a href="https://www.flaticon.com">www.flaticon.com</a></string>
    <string name="credits_content_four">Feedback Icon made by <a href="https://www.flaticon.com/authors/those-icons">ThoseIcons</a> from <a href="https://www.flaticon.com">www.flaticon.com</a></string>
    <string name="credits_content_five">About Page Background: Photo by <a href="https://unsplash.com/@scottwebb">Scott Webb</a> on <a href="https://unsplash.com">Unsplash</a></string>
    <string name="view_source_code">View Source Code</string>
    <string name="title_credits">Credits</string>
    <string name="name_dictionary_provider">Dictionary: Necat Demirağ</string>
    <string name="name_developer">Developer: Samet Şahin</string>
    <string name="listing_option_circassian">Circassian</string>
    <string name="listing_option_turkish">Turkish</string>
    <string name="warning_word_not_found">Unfortunately we haven\'t been able to find a match</string>
    <string name="btn_search_another_word">Search Another Word</string>
    <string name="default_language_option_circassian">Circassian</string>
    <string name="default_language_option_turkish">Turkish</string>
    <string name="default_language_option_english">English</string>
    <string name="nav_item_text_search">Search</string>
    <string name="nav_item_text_archive">Word List</string>
    <string name="nav_item_text_settings">Settings</string>
    <string name="nav_item_text_about">About</string>
    <string name="nav_item_text_share">Share</string>
    <string name="nav_item_text_feedback">Give Feedback</string>
    <string name="nav_item_text_rate">Rate the app</string>
    <string name="pref_title_search_suggestions">Show suggestions for query</string>
    <string name="pref_title_recent_search_history">Clear recent search history</string>
    <string name="pref_title_preferred_language">Preferred Language</string>
    <string name="recent_search_history_cleared_message">Recent search history cleared</string>
    <string name="special_characters">Special Characters</string>
    <string name="close_special_character_panel">Close</string>
    <string name="swipe_for_more">Swipe for more</string>
    <string name="nav_item_text_alphabet">Alphabet</string>

    <string-array name="pref_entry_values_preferred_language">
        <item>Turkish</item>
        <item>English</item>
    </string-array>
    <string-array name="pref_entries_preferred_language">
        <item>@string/default_language_option_turkish</item>
        <item>@string/default_language_option_english</item>
    </string-array>

</resources>
