<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/nav_search"
          android:icon="@drawable/search_icon"
          android:title="@string/nav_item_text_search"/>

    <item android:id="@+id/nav_archive"
          android:icon="@drawable/archive_icon"
          android:title="@string/nav_item_text_archive"/>

    <item android:id="@+id/nav_settings"
          android:icon="@drawable/settings_icon"
          android:title="@string/nav_item_text_settings"/>

    <item android:id="@+id/nav_info"
          android:icon="@drawable/info_icon"
          android:title="@string/nav_item_text_about"/>

    <item android:id="@+id/nav_share"
          android:icon="@drawable/share_icon"
          android:title="@string/nav_item_text_share"/>

    <item android:id="@+id/nav_feedback"
          android:icon="@drawable/feedback_icon"
          android:title="@string/nav_item_text_feedback"/>

    <item android:id="@+id/nav_rate"
          android:icon="@drawable/rate_icon"
          android:title="@string/nav_item_text_rate"/>
</menu>