<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.widget.RelativeLayout
        tools:context="com.tur_cirdictionary.turkish_circassiandictionary.MainActivity"
        android:id="@+id/root_view"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:background="@color/mainActivityBackground"
        android:focusableInTouchMode="true">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#296529"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

            <ImageView
                android:id="@+id/action_bar_icon"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:scaleType="centerInside"
                android:src="@drawable/action_bar_logo"/>

        </android.support.v7.widget.Toolbar>

        <SearchView
            android:id="@+id/sw_searchForWord"
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:layout_below="@id/toolbar"
            android:background="#296529"
            android:iconifiedByDefault="false"
            android:queryHint="@string/search_hint"
            android:theme="@style/SearchViewTheme"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rw_specialCharacters"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="horizontal"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"/>

        <Button
            android:id="@+id/btn_closePanel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/rw_specialCharacters"
            android:layout_alignParentEnd="true"
            android:layout_margin="10dp"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:background="@drawable/btn_search_again_rounded"
            android:fontFamily="@font/roboto_regular"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:textColor="@color/mainActivityBackground"
            android:textSize="16sp"
            android:text="@string/close_special_character_panel" />

        <Button
            android:id="@+id/btn_showSpecialCharacters"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_margin="20dp"
            android:paddingStart="25dp"
            android:paddingEnd="25dp"
            android:background="@drawable/btn_search_again_rounded"
            android:fontFamily="@font/roboto_regular"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:textColor="@color/mainActivityBackground"
            android:textSize="20sp"
            android:text="@string/special_characters" />

    </android.widget.RelativeLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="#296529"
        android:layout_gravity="start"
        app:headerLayout="@layout/navigation_header"
        app:itemTextAppearance="@style/RobotoRegularMenuItemStyle"
        app:menu="@menu/navigation_menu"
        android:theme="@style/Theme.AppCompat">

    </android.support.design.widget.NavigationView>
</android.support.v4.widget.DrawerLayout>

